clusters/home/apps/memos/memos/configs/memos-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memos-ingressroute
  namespace: memos
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://memos.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Memos
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: memos # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Memos
    #gethomepage.dev/widget.type: "memos"
    #gethomepage.dev/widget.url: "https://memos.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`memos.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: memos
      port: 5230
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: memos-certificate-secret
